--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.benrobson</groupId>
     <artifactId>zander</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0</version>
 
     <build>
         <plugins>
